<resources>
    <string name="app_name">Unidades PRO</string>
    <string name="instruccion">Selecciona la opcion que desees ejecutar</string>
    <string name="btn1">Peso</string>
    <string name="btn2">Longitud</string>
    <string name="btn3">Temperatura</string>
    <string name="btn4">Volumen</string>
    <string name="Resultado">Resultado:</string>
    <string name="btnCalcular">Calcular</string>
    <string name="Instruccion">Covertir de:</string>
    <string name="Instruccion2">Convertir a:</string>

    //Spinner de Peso
    <string-array name="spinnerPeso">
        <item>Hectogramo</item>
        <item>Decagramo</item>
        <item>Gramo</item>
        <item>Decigramo</item>
        <item>Centigramo</item>
        <item>Miligramo</item>
        <item>Kilogramo</item>
        <item>Onza</item>
        <item>Libra</item>
    </string-array>
    //Spinner de Longitud
    <string-array name="spinnerLongitud">
        <item>Metro</item>
        <item>Decímetro</item>
        <item>Centímetro</item>
        <item>Milímetro</item>
        <item>Decámetro</item>
        <item>Hectómetro</item>
        <item>Kilómetro</item>
    </string-array>
    //Spinner de Temperatura
    <string-array name="spinnerTemperatura">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    //Spinner de Volumen
    <string-array name="spinnerVolumen">
        <item>Litro</item>
        <item>Mililitro</item>
    </string-array>

</resources>
