<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".temperatura">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Instruccion"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sp_unidadTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_unidadTemp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="44dp"
        android:entries="@array/spinnerTemperatura"
        app:layout_constraintBottom_toTopOf="@+id/txt_valorTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_valorTemp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="76dp"
        android:hint="Ingresa la cantidad"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Instruccion2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sp_unidadTemp2"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_unidadTemp2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="72dp"
        android:entries="@array/spinnerTemperatura"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcularTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_resultadoTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/Resultado"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calcularTemp"
        android:layout_width="132dp"
        android:layout_height="67dp"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#e5aa17"
        android:onClick="conversionTemp"
        android:text="@string/btnCalcular"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_resultadoTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Conversion de temperatura"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_regresoMain" />

    <ImageView
        android:id="@+id/btn_regresoMain"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="irMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regreso" />
</androidx.constraintlayout.widget.ConstraintLayout>